# enterprise/api/v1/openapi.yaml
@@ -26,7 +26,89 @@ paths:
         '404':
           description: Cilium Enterprise API is not available
           x-go-name: Disabled
-parameters: {}
+  "/network/attachment":
+    get:
+      summary: Retrieve the network attachment for a pod
+      tags:
+        - network
+      parameters:
+        - "$ref": "#/parameters/network-pod-name"
+        - "$ref": "#/parameters/network-pod-namespace"
+      responses:
+        '200':
+          description: Success
+          schema:
+            "$ref": "#/definitions/NetworkAttachmentList"
+        '500':
+          description: Network attachment error
+          x-go-name: Failure
+          schema:
+            "$ref": "#/definitions/Error"
+        '501':
+          description: Network attachment feature is disabled
+          x-go-name: Disabled
+parameters:
+  network-pod-name:
+    name: pod-name
+    description: Kubernetes pod name for which to query the network attachment
+    required: true
+    in: query
+    type: string
+  network-pod-namespace:
+    name: pod-namespace
+    description: Kubernetes pod namespace for which to query the network attachment
+    required: true
+    in: query
+    type: string
 definitions:
   Error:
     type: string
+  NetworkAttachmentList:
+    description: |-
+      List of network attachments
+    properties:
+      pod-name:
+        description: Name of the pod which is attached to these networks
+        type: string
+      pod-namespace:
+        description: Namespace of the pod which is attached to these networks
+        type: string
+      attachments:
+        description: Networks this pod is attached to
+        type: array
+        items:
+          "$ref": "#/definitions/NetworkAttachmentElement"
+  NetworkAttachmentElement:
+    description: A network attachment
+    type: object
+    required:
+      - name
+    properties:
+      name:
+        description: Name of the network this pod is attached to
+        type: string
+      ipam:
+        description: IPAM parameters
+        "$ref": "#/definitions/NetworkAttachmentIPAMParameters"
+      routes:
+        description: Network routes to set up for this network attachment inside the pod
+        type: array
+        items:
+          "$ref": "#/definitions/NetworkAttachmentRoute"
+  NetworkAttachmentIPAMParameters:
+    description: IPAM parameters of a network attachment
+    type: object
+    properties:
+      ipam-pool:
+        description: Name of the IPAM pool this network attachment allocates from
+        type: string
+  NetworkAttachmentRoute:
+    description: Route for a network attachment
+    type: object
+    properties:
+      destination:
+        description: Route destination
+        type: string
+      gateway:
+        description: Route gateway
+        type: string
