# enterprise/api/v1/server/restapi/network/get_network_attachment_responses.go
@@ -1,0 +1,137 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package network
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/cilium/cilium/enterprise/api/v1/models"
+)
+
+// GetNetworkAttachmentOKCode is the HTTP code returned for type GetNetworkAttachmentOK
+const GetNetworkAttachmentOKCode int = 200
+
+/*
+GetNetworkAttachmentOK Success
+
+swagger:response getNetworkAttachmentOK
+*/
+type GetNetworkAttachmentOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.NetworkAttachmentList `json:"body,omitempty"`
+}
+
+// NewGetNetworkAttachmentOK creates GetNetworkAttachmentOK with default headers values
+func NewGetNetworkAttachmentOK() *GetNetworkAttachmentOK {
+
+	return &GetNetworkAttachmentOK{}
+}
+
+// WithPayload adds the payload to the get network attachment o k response
+func (o *GetNetworkAttachmentOK) WithPayload(payload *models.NetworkAttachmentList) *GetNetworkAttachmentOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get network attachment o k response
+func (o *GetNetworkAttachmentOK) SetPayload(payload *models.NetworkAttachmentList) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetNetworkAttachmentOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetNetworkAttachmentFailureCode is the HTTP code returned for type GetNetworkAttachmentFailure
+const GetNetworkAttachmentFailureCode int = 500
+
+/*
+GetNetworkAttachmentFailure Network attachment error
+
+swagger:response getNetworkAttachmentFailure
+*/
+type GetNetworkAttachmentFailure struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Error `json:"body,omitempty"`
+}
+
+// NewGetNetworkAttachmentFailure creates GetNetworkAttachmentFailure with default headers values
+func NewGetNetworkAttachmentFailure() *GetNetworkAttachmentFailure {
+
+	return &GetNetworkAttachmentFailure{}
+}
+
+// WithPayload adds the payload to the get network attachment failure response
+func (o *GetNetworkAttachmentFailure) WithPayload(payload models.Error) *GetNetworkAttachmentFailure {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get network attachment failure response
+func (o *GetNetworkAttachmentFailure) SetPayload(payload models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetNetworkAttachmentFailure) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetNetworkAttachmentDisabledCode is the HTTP code returned for type GetNetworkAttachmentDisabled
+const GetNetworkAttachmentDisabledCode int = 501
+
+/*
+GetNetworkAttachmentDisabled Network attachment feature is disabled
+
+swagger:response getNetworkAttachmentDisabled
+*/
+type GetNetworkAttachmentDisabled struct {
+}
+
+// NewGetNetworkAttachmentDisabled creates GetNetworkAttachmentDisabled with default headers values
+func NewGetNetworkAttachmentDisabled() *GetNetworkAttachmentDisabled {
+
+	return &GetNetworkAttachmentDisabled{}
+}
+
+// WriteResponse to the client
+func (o *GetNetworkAttachmentDisabled) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(501)
+}
